add splash screen

--- a/AnIceAndFire/app/src/main/res/values/colors.xml
+++ b/AnIceAndFire/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="color_accent">#9E9E9E</color>
     <color name="color_accent_progress">#BD2427</color>
 
+    <color name="color_transparent">#00FFFFFF</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="grey_light">#DBDBDB</color>
