--- a/AnIceAndFire/app/src/main/res/values/styles.xml
+++ b/AnIceAndFire/app/src/main/res/values/styles.xml
@@ -14,4 +14,21 @@
         <item name="android:windowBackground">@drawable/splash</item>
     </style>
 
+    <style name="progress_theme" parent="android:Theme">
+        <item name="android:windowIsTranslucent">true</item>
+
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:backgroundDimEnabled">false</item>
+    </style>
+
+    <style name="CircularProgress" parent="Theme.AppCompat.Light">
+        <item name="colorAccent">@color/color_accent_progress</item>
+    </style>
+
+    <style name="ProgressStyle" parent="Base.Widget.AppCompat.ProgressBar">
+        <item name="colorAccent">@color/color_accent_progress</item>
+    </style>
+
 </resources>
