--- a/AnIceAndFire/app/src/main/res/layout/activity_splash.xml
+++ b/AnIceAndFire/app/src/main/res/layout/activity_splash.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coordinator_splash"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="xyz.rnovoselov.enterprise.aniceandfire.ui.activities.SplashActivity">
 
-</android.support.constraint.ConstraintLayout>
+</android.support.design.widget.CoordinatorLayout>
