Add retrofit & rxjava dependencies

--- a/AnIceAndFire/app/src/main/res/layout-land/activity_splash.xml
+++ b/AnIceAndFire/app/src/main/res/layout-land/activity_splash.xml
@@ -5,6 +5,13 @@
     android:id="@+id/coordinator_splash"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/black"
     tools:context="xyz.rnovoselov.enterprise.aniceandfire.ui.activities.SplashActivity">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/splash" />
 
 </android.support.design.widget.CoordinatorLayout>
