- Add resourseprovider - load default list of houses

--- a/AnIceAndFire/app/src/main/res/values/colors.xml
+++ b/AnIceAndFire/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="color_primary">#85041A</color>
     <color name="color_primary_dark">#510110</color>
-    <color name="color_accent">#9E9E9E</color>
+    <color name="color_accent">#4D4D4D</color>
     <color name="color_accent_progress">#BD2427</color>
 
     <color name="color_transparent">#00FFFFFF</color>
