- Разметка итема дома - добавлены интерфейсы вьюх - aspect ratio image view - more ….

--- a/AnIceAndFire/app/src/main/res/layout/content_main.xml
+++ b/AnIceAndFire/app/src/main/res/layout/content_main.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -13,14 +14,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:text="Нет загруженных домов для отображения"
+        android:text="@string/main_has_no_houses_for_view"
         android:visibility="gone" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/houses_rv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent" />
 
-    </android.support.v7.widget.RecyclerView>
-
-</android.support.constraint.ConstraintLayout>
+</FrameLayout>
