--- a/AnIceAndFire/app/src/main/res/layout/activity_main.xml
+++ b/AnIceAndFire/app/src/main/res/layout/activity_main.xml
@@ -2,8 +2,10 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coordinator_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/grey_light"
     android:fitsSystemWindows="true"
     tools:context="xyz.rnovoselov.enterprise.aniceandfire.ui.activities.MainActivity">
 
@@ -30,7 +32,7 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:backgroundTint="@color/color_primary"
-        app:rippleColor="@color/color_primary"
+        app:rippleColor="@color/color_accent_progress"
         app:srcCompat="@drawable/ic_cloud_download_black_24dp" />
 
 </android.support.design.widget.CoordinatorLayout>
