--- a/AnIceAndFire/app/src/main/res/values/colors.xml
+++ b/AnIceAndFire/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="color_transparent">#00FFFFFF</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
-    <color name="grey_light">#DBDBDB</color>
+    <color name="grey_light">#EDEFF3</color>
     <color name="grey">#939393</color>
     <color name="grey_dark">#5F5F5F</color>
 </resources>
