--- a/AnIceAndFire/app/src/main/res/values/dimens.xml
+++ b/AnIceAndFire/app/src/main/res/values/dimens.xml
@@ -31,6 +31,7 @@
 
     <!-- Margins -->
     <dimen name="margin_little_8">8dp</dimen>
+    <dimen name="margin_12">12dp</dimen>
     <dimen name="margin_small_16">16dp</dimen>
     <dimen name="margin_20">20dp</dimen>
     <dimen name="margin_normal_24">24dp</dimen>
@@ -48,6 +49,11 @@
     <dimen name="padding_16">16dp</dimen>
     <dimen name="padding_large_24">24dp</dimen>
     <dimen name="padding_big_32">32dp</dimen>
+
+    <!-- CardView options -->
+    <dimen name="card_radius">2dp</dimen>
+    <dimen name="card_elevation">4dp</dimen>
+
 
     <dimen name="custom_tab_layout_height">80dp</dimen>
     <dimen name="rv_items_heigth">72dp</dimen>
