--- a/AnIceAndFire/app/src/main/res/layout/activity_main.xml
+++ b/AnIceAndFire/app/src/main/res/layout/activity_main.xml
@@ -23,8 +23,17 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+    </FrameLayout>
+
+    <!--
+        <include layout="@layout/content_main" />
+    -->
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
