--- a/AnIceAndFire/app/src/main/res/values-v21/styles.xml
+++ b/AnIceAndFire/app/src/main/res/values-v21/styles.xml
@@ -8,7 +8,7 @@
         <item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
-        <item name="android:statusBarColor">@color/color_accent</item>
+        <item name="android:statusBarColor">@color/color_primary_dark</item>
         <item name="android:windowTranslucentStatus">true</item>
     </style>
 
